# pixeleditor_PZPP

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Renderer/: CanvasRenderer.cpp  CanvasRenderer.h  CanvasTools.cpp  CanvasTools.h  ColorPicker.cpp  ColorPicker.h  ColorUtils.cpp  ColorUtils.h  Config.h  EditorGUI.h  Menu.cpp  Renderer.cpp  Renderer.h  UI.cpp  View.cpp  View.h
src/Resources/: TEMPORARY_tool.cpp  binary_icons.h
src/Tools/: DocHandler.cpp  DocHandler.h  IFileManager.cpp  IFileManager.h  ITools.cpp  ITools.h
src/core/: Image.cpp  Image.h  Layer.cpp  Layer.h  Types.h  structs.cpp  structs.h
src/file/: file.cpp  file.h
